Revert "Revert "fix scrollbar""
This reverts commit 2a96e800a9c8362b2d690d3d8e844e8d54c2e99e.

--- a/assets/stylus/countdown.styl
+++ b/assets/stylus/countdown.styl
@@ -1,7 +1,7 @@
 .container
 	width 90%
 	margin 0 auto
-	margin-top 2rem
+	padding-top 2rem
 	display relative
 
 .countdown
